Add support for Non-Valuable Legacy badges (NVLs)
