# borValBadgeDbServer/db/db.py
@@ -13,10 +13,16 @@ dbPath = None
 dbLock = Lock()
 badgeDB: Database = None
 badgeIdCache = {}
+nvlList = set()
 
 
 def getBadgeDB():
     return badgeDB
+
+
+def isNVL(badgeId):
+    global nvlList
+    return str(badgeId) in nvlList
 
 
 def getBadgeIdCache():
@@ -33,6 +39,12 @@ def updateBadgeIdCache(universeId):
 
 def loadDatabase():
     dbLock.acquire()
+    global nvlList
+    for nvl in open("nonvaluablelegacybadges.txt").read().replace(",", " ").split():
+        if nvl in ["20006347", "20006350", "20006359"] or int(nvl) < 17170400:
+            continue
+        nvlList.add(nvl)
+
     global dbPath
     if len(sys.argv) < 2:
         dbPath = "borValBadgeDB.json.gz"
