# borValBadgeDbServer/models/badge_info.py
@@ -13,19 +13,20 @@ badge_info_openapi_types = {
     'found': bool,
     'created': int,
     'awarding_universe': int,
-    'value': int
+    'value': int,
+    'is_nvl': bool,
 }
 
 
 class BadgeInfo(Model):
-    __slots__ = "openapi_types", "_badge_id", "_found", "_created", "_awarding_universe", "_value"
+    __slots__ = "openapi_types", "_badge_id", "_found", "_created", "_awarding_universe", "_value", "_is_nvl"
 
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
-    def __init__(self, badge_id=0, found=True, created=0, awarding_universe=0, value=0):  # noqa: E501
+    def __init__(self, badge_id=0, found=True, created=0, awarding_universe=0, value=0, is_nvl=False):  # noqa: E501
         """BadgeInfo - a model defined in OpenAPI
 
         :param badge_id: The badge_id of this BadgeInfo.  # noqa: E501
@@ -38,6 +39,8 @@ class BadgeInfo(Model):
         :type awarding_universe: int
         :param value: The value of this BadgeInfo.  # noqa: E501
         :type value: int
+        :param is_nvl: The is_nvl of this BadgeInfo.  # noqa: E501
+        :type is_nvl: bool
         """
         self.openapi_types = badge_info_openapi_types
 
@@ -46,6 +49,7 @@ class BadgeInfo(Model):
         self._created = created
         self._awarding_universe = awarding_universe
         self._value = value
+        self._is_nvl = is_nvl
 
     @classmethod
     def from_dict(cls, dikt) -> 'BadgeInfo':
@@ -161,3 +165,23 @@ class BadgeInfo(Model):
         :type value: int
         """
         self._value = value
+
+    @property
+    def is_nvl(self):
+        """Gets the is_nvl of this BadgeInfo.
+
+
+        :return: The is_nvl of this BadgeInfo.
+        :rtype: bool
+        """
+        return self._is_nvl
+
+    @is_nvl.setter
+    def is_nvl(self, is_nvl):
+        """Sets the is_nvl of this BadgeInfo.
+
+
+        :param is_nvl: The is_nvl of this BadgeInfo.
+        :type is_nvl: bool
+        """
+        self._is_nvl = is_nvl
